# autofutarchy

./: .env.example  CLAUDE.md  GOVERNANCE.md  LICENSE  README.md  SESSION_NOTES.md  app.py  cli.py  database.py  llm_governance_trader.py  llm_trader.py  llm_trader_toolbox.py  llm_trader_with_search.py  main.py  market.py  prediction_market.db  pyproject.toml  requirements.txt  run_web.sh  streamlit_app.py
proposals/: 001-add-pytest.md
